--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
 
     #hero {
       position: relative;
+      overflow: hidden;
       /* width:100%;
     height:100vh;
     background-image: url(background.jpg);
