--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
       left: 0;
       width: 50px;
       height: 50px;
-      background-image: url('file/snow.png');
+      background-image: url('file/pngtree-love-heart-icon-png-image_5958163.png');
       background-size: cover; 
       background-position: center;
       animation: animationSnow 4s ease-in-out infinite;
